# hhvm

./: CMakeLists.txt
CMake/: HHVMExtensionConfig.cmake  HPHPFindLibs.cmake  HPHPFunctions.cmake  HPHPSetup.cmake
hphp/compiler/: code_generator.h  construct.h  package.cpp  type_annotation.h
hphp/compiler/analysis/: analysis_result.cpp  block_scope.h  emitter.h  exceptions.h  function_scope.h
hphp/compiler/expression/: expression.h
hphp/compiler/parser/: parser.h
hphp/hhbbc/: index.h  main.cpp
hphp/hhvm/: CMakeLists.txt  process-init.cpp
hphp/parser/: parser.h  scanner.h
hphp/ppc64-asm/: asm-ppc64.h
hphp/runtime/: CMakeLists.txt
hphp/runtime/base/: apc-array.h  apc-collection.h  apc-file-storage.cpp  apc-handle.h  arch.h  array-data.h  array-iterator.cpp  builtin-functions.cpp  builtin-functions.h  collections.h  config.h  crash-reporter.cpp  directory.h  emulate-zend.cpp  exceptions.h  execution-context.cpp  execution-context.h  extended-logger.h  file-stream-wrapper.cpp  file-stream-wrapper.h  file-util.cpp  file.cpp  file.h  heap-scan.h  imarker.h  memory-manager.cpp  memory-manager.h  mixed-array.h  (+38 more)
hphp/system/: CMakeLists.txt  systemlib.h
hphp/test/: run
hphp/util/: CMakeLists.txt  alloc.cpp  asm-x64.h  async-func.cpp  code-cache.h  compatibility.cpp  compatibility.h  embedded-data.cpp  exception.h  hdf.h  health-monitor-types.h  htonll.h  logger.cpp  logger.h  network.cpp  portability.h  process.cpp  process.h  ringbuffer.cpp  ringbuffer.h  stack-trace.cpp  string-vsnprintf.h  text-util.h  trace.h
hphp/zend/: CMakeLists.txt  zend-string.cpp
(+136 files in other folders)
